--- a/src/stylesheets/components/_filters.scss
+++ b/src/stylesheets/components/_filters.scss
@@ -18,6 +18,7 @@
     position: sticky;
     top: 0;
     height: 100%;
+    min-height: 16.563rem;
   }
   &__select {
     display: flex;
